--- a/_scss/component/_post.scss
+++ b/_scss/component/_post.scss
@@ -6,7 +6,8 @@
   }
 
   @media (min-width: 38rem) {
-    font-size: .9rem;
+    // 글자 size
+    font-size: .8rem;
 
     h1 { font-size: 1.5rem; }
     h2 { 
@@ -40,6 +41,7 @@
   }
 
   article {
+    // 단락(H태그 기준) 줄 간격 조정
     line-height: 25px;
   }
 }
