--- a/_scss/base/_poole.scss
+++ b/_scss/base/_poole.scss
@@ -115,9 +115,8 @@ strong {
 
 
 /* Lists */
-// 본문 내 ul, ol 태그 margin 설정
 ul, ol, dl {
-  margin-top: 0.5rem;
+  margin-top: 0;
   margin-bottom: 1rem;
 }
 
