--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -6,9 +6,10 @@
 <div class="sidebar" id="sidebar">
   <div class="sidebar-item">
     <div class="sidebar-personal-info">
-      <div class="sidebar-personal-info-section">
-        <a href="http://gravatar.com/{{ site.author.gravatar }}">
-          <img src="http://www.gravatar.com/avatar/{{ site.author.gravatar }}?s=350" title="View on Gravatar" alt="View on Gravatar" />
+      <div class="
+      ">
+        <a href="https://www.github.com/tothefullest08">
+          <img src="/public/profile.jpg" alt="profile picture" />
         </a>
       </div>
       <div class="sidebar-personal-info-section">
@@ -18,7 +19,7 @@
       {% assign len = site.author.contact | size %}
       {% assign current_index = 0 %}
       <div class="sidebar-personal-info-section">
-        <p> About me: 
+        <p> Contact Me
         {% for contact in site.author.contact %}
         {% assign iconname = contact[0] %}
         {% if contact[0] == 'email' %}
@@ -30,12 +31,19 @@
         {% assign current_index = current_index | plus: 1 %}
         {% if current_index != len %}|{% endif %}
         {% endfor %}
+        <br>
+        <span class="notice">
+
+        환영합니다 :)
+        개인적으로 공부한 내용을 정리하는 블로그입니다.
+        </span>
         </p>
       </div>
       {% endif %}
     </div>
   </div>
 
+<!-- 사이드 메뉴시작 -->
   <nav class="sidebar-nav">
     {% for nav in site.nav %}
       {% assign is_relative = nav[1][0] | slice: 0 %}
@@ -45,7 +53,7 @@
       {% endif %}
 
       {% assign sub_len = nav[1] | size | minus: 1 %}
-
+      <!-- 사이드바 대분류 -->
       <span class="{% if sub_len > 0 %}foldable{% endif %}">
         <a class="sidebar-nav-item {% if page.url == nav[1][0] %}active{% endif %}" href="{{ url }}">
           {{ nav[0] }}
@@ -58,8 +66,17 @@
             {% if sub_is_relative == '/' %}
               {% assign sub_url = sub_nav[1] | prepend: site.baseurl %}
             {% endif %}
+            <!-- 사이드바 카테고리 소분류  -->
+
               <a class="sidebar-nav-item sidebar-nav-item-sub {% if page.url == sub_nav[1] %}active{% endif %}" href="{{ sub_url }}">
-                {{ sub_nav[0] }}
+                {% assign t = sub_nav[0] %}
+                {{ sub_nav[0] }} -
+                  {% assign counter = 0 %}
+                  {% for item in site.categories.[t] %}
+                  {% unless item.published == false %}
+                  {% assign counter=counter | plus:1 %}
+                  {% endunless %}{% endfor %}
+                  {{ counter }}
               </a>
           {% endfor %}
         {% endfor %}
@@ -67,16 +84,9 @@
 
     {% endfor %}
 
-    <span class="sidebar-nav-item">Currently v{{ site.version }}</span>
+
   </nav>
-
-  <div class="sidebar-item">
-    <p>
-    &copy; {{ site.time | date: '%Y' }} {{ site.author.name }}. This work is liscensed under <a href="http://creativecommons.org/licenses/by-nc/4.0/">CC BY-NC 4.0</a>.
-    </p>
-  </div>
-
-  <div class="sidebar-item">
+  <div class="sidebar-item template">
     <p>
     Powered by <a href="http://jekyllrb.com">jekyll</a> and <a href="http://codinfox.github.io">codinfox-lanyon</a>
     </p>
