favicon, icon change

--- a/_scss/base/_poole.scss
+++ b/_scss/base/_poole.scss
@@ -319,9 +319,9 @@ tbody tr:nth-child(odd) th {
   color: #505050;
 }
 .masthead-title small {
-  font-size: 75%;
-  font-weight: 400;
-  color: #c0c0c0;
+  font-size: 90%;
+  font-weight: 500;
+  color:#a2a2a2;
   letter-spacing: 0;
 }
 
