--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -33,9 +33,9 @@
         {% endfor %}
         <br>
         <span class="notice">
+        <br>
 
-        환영합니다 :)
-        개인적으로 공부한 내용을 정리하는 블로그입니다.
+        개인적으로 공부한 내용을 정리하고 기록하는 블로그입니다.
         </span>
         </p>
       </div>
