--- a/_scss/base/_poole.scss
+++ b/_scss/base/_poole.scss
@@ -50,7 +50,7 @@ body {
 html {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 16px;
-  line-height: 27px;
+  line-height: 1.5;
 }
 @media (min-width: 38em) {
   html {
