--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -35,7 +35,7 @@
         <span class="notice">
         <br>
 
-        개인적으로 공부한 내용을 정리하고 기록하는 블로그입니다.
+        블로그 이전했습니다. <a href="https://www.borntodare.me">새 블로그 주소</a>
         </span>
         </p>
       </div>
